--- a/index.html
+++ b/index.html
@@ -1989,6 +1989,27 @@
                                 <h3>Гимбицкий Артур Вячеславович</h3>
                                 <span class="subtitle2">директор Корпоративного института КНИТУ-КАИ, Казань</span>
                             </div>
+                        </div> 
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/deev.JPG" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Деев Олег Александрович</h3>
+                                <span class="subtitle2">и.о. начальника управления по информационным технологиям ЗАО «Ижевский нефтяной научный центр», Ижевск</span>
+                            </div>
+                        </div>
+                        
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/suhanov.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Суханов Дмитрий Анатольевич</h3>
+                                <span class="subtitle2">менеджер компетенции "Предпринимательство" WorldSkills, Москва</span>
+                            </div>
                         </div>
 
                     </div>
