--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                                                             <div class="sc-pic"><img src="images/team/fominov.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>ФОМИНОВ Михаил Александрович</span><br> первый заместитель министра информатизации и связи Удмуртской Республики, Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3>Новые вызовы в образовании: дистанционное образование - достоинства и недостатки</h3>
+                                                            <h3>Выпускник - реальность и ожидание</h3>
                                                             </div>
                                                             <div class="clearfix"></div>
                                                          </div>
