--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
                                                     
                                                         <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/haraev.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Хараев Геннадий Олегович</span><br>ст. менеджер дирекции по развитию нового бизнеса ПАО "ВымпелКом", Ижевск</h4></div>
+                                                            <div class="sc-name"><h4><span>Хараев Геннадий Олегович</span><br>ст. менеджер дирекции по развитию нового бизнеса ПАО "ВымпелКом", Москва</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Скоринг абитуриентов при поступлении и во время учебы</h3>
                                                             </div>
@@ -1976,7 +1976,7 @@
                                 </figure>
 
                                 <h3>Хараев Геннадий Олегович</h3>
-                                <span class="subtitle2">ст. менеджер дирекции по развитию нового бизнеса ПАО "ВымпелКом", Ижевск</span>
+                                <span class="subtitle2">ст. менеджер дирекции по развитию нового бизнеса ПАО "ВымпелКом", Москва</span>
                             </div>
                         </div>
                         
