--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                                                         
                                                         <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/molchanov.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Молчанов Александр Сергеевич</span><br>к.п.н., вице-президент УК "Прообраз", заместитель руководителя комитета по профобразованию и подготовке кадров "Деловой России", основатель и лидер компании "Профессиональное электронное образование", Москва</h4></div>
+                                                            <div class="sc-name"><h4><span>Молчанов Александр Сергеевич</span><br>к.п.н., основатель и лидер компании "Профессиональное электронное образование", Москва</h4></div>
                                                             <div class="sc-info">
                                                             <h3>10 возможностей цифрового мира, которые упускают вузы</h3>
                                                             </div>
@@ -1587,7 +1587,7 @@
                                 </figure>
 
                                 <h3>Молчанов Александр Сергеевич</h3>
-                                <span class="subtitle2">к.п.н., вице-президент УК "Прообраз", заместитель руководителя комитета по профобразованию и подготовке кадров "Деловой России", основатель и лидер компании "Профессиональное электронное образование", Москва</span>
+                                <span class="subtitle2">к.п.н., основатель и лидер компании "Профессиональное электронное образование", Москва</span>
                             </div>
                         </div>
 
