--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/kalashnikova.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Калашникова Татьяна Григорьевна</span><br>к.т.н., доцент кафедры "Инженерная графика и компьютерный дизайн" ЮФУ, Ростов-на-Дону</h4></div>
+                                                            <div class="sc-name"><h4><span>Калашникова Татьяна Григорьевна</span><br>к.т.н., доцент кафедры "Инженерная графика и компьютерный дизайн" ЮФУ, эксперт международного конкурса EdCrunchAward, Ростов-на-Дону</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Особенности реализации проектно-образовательного интенсива ЮФУ в онлайн-формате</h3>
                                                             </div> 
@@ -870,7 +870,7 @@
 
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/kalashnikova.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-name"><h4><span>Калашникова Татьяна Григорьевна</span><br>к.т.н., доцент кафедры "Инженерная графика и компьютерный дизайн" ЮФУ, Ростов-на-Дону</h4></div>
+                                                            <div class="sc-name"><h4><span>Калашникова Татьяна Григорьевна</span><br>к.т.н., доцент кафедры "Инженерная графика и компьютерный дизайн" ЮФУ, эксперт международного конкурса EdCrunchAward, Ростов-на-Дону</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Организация дистанционного обучения в инженерной подготовке</h3>
                                                             </div>
@@ -1921,7 +1921,7 @@
                                 </figure>
 
                                 <h3>Калашникова Татьяна Григорьевна</h3>
-                                <span class="subtitle2">к.т.н., доцент кафедры "Инженерная графика и компьютерный дизайн" ЮФУ, Ростов-на-Дону</span>
+                                <span class="subtitle2">к.т.н., доцент кафедры "Инженерная графика и компьютерный дизайн" ЮФУ, эксперт международного конкурса EdCrunchAward, Ростов-на-Дону</span>
                             </div>
                         </div>
                         <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
