--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                                                             <div class="sc-pic"><img src="images/team/bashmakova.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>БАШМАКОВА Светлана Борисовна</span><br>к.п.н, доцент, и.о. зав. кафедрой дефектологии ВятГУ, руководитель РУМЦ, Киров</h4></div>
                                                             <div class="sc-info">
-                                                            <h3>Использование  VR- и IR-технологий в обучении инвалидов инженерных направлений подготовки</h3>
+                                                            <h3>Использование  VR- и AR-технологий в обучении инвалидов инженерных направлений подготовки</h3>
                                                             </div>   
                                                             <div class="clearfix"></div>                               
                                                          </div>
