--- a/index.html
+++ b/index.html
@@ -504,9 +504,9 @@
                                                             <div class="sc-info"><h3>Модератор</h3></div>
                                                         </div>
                                                         <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/shishlina.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/zhuikova.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
-                                                            <h4><span>ШИШЛИНА Наталья Васильевна</span><br>к.п.н., доцент кафедры "Программное обеспечение" ИжГТУ имени М.Т.Калашникова, Ижевск</h4>
+                                                            <h4><span>Жуйкова Ольга Викторовна</span><br>к.п.н, доцент, зав. кафедрой «Инженерная графика, профессиональная педагогика и технология рекламы» ИжГТУ имени М.Т.Калашникова, Ижевск</h4>
                                                             </div>                                                            
 
                                                             <div class="clearfix"></div>                                                      
