--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
                                                             <div class="clearfix"></div>                                                      
                                                          </div>
                                                          <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/nikitinaev.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
                                                             <h4><span>Никитина Елена Валентиновна</span><br>начальник отдела профессионального образования МОиН УР, Ижевск</h4>
                                                             </div>                                                            
@@ -1361,22 +1361,37 @@
 
                                                           <div class="schedule-item">
                                                             <div class="sc-info"><h3>Спикеры</h3></div>
-                                                        </div>                                                     
-                                                    
-                                                        <div class="schedule-item">
+                                                        </div>      
+
+                                                         <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/nagovitsyn.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>НАГОВИЦЫН СТАНИСЛАВ СЕРГЕЕВИЧ</span><br>магистрант кафедры "Информационные системы" ИжГТУ имени М.Т.Калашникова, Ижевск</h4></div>
+                                                            <div class="spacer-for2sp"></div>
+                                                            <div class="sc-pic">&nbsp</div>
+                                                            <div class="sc-name">&nbsp</div>
                                                             <div class="sc-info">
                                                             <h3>Виртуальные лабораторные на основе системы Unity</h3>
                                                             </div>
-                                                             <div class="clearfix"></div>
-                                                         </div>
+                                                            <div class="spacer-for2sp"></div>
+                                                            <div class="sc-pic"><img src="images/team/shamshurin.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Шамшурин Максим Александрович</span><br>студент 4 курса института информатики и вычислительной техники ИжГТУ имени М.Т.Калашникова, Ижевск</h4></div> 
+                                                            <div class="clearfix"></div>                                                            
+                                                         </div>     
 
                                                          <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/meteshkina.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>Метешкина Виктория Александровна</span><br>студентка 4 курса машиностроительного факультета, председатель студенческого совета ИжГТУ имени М.Т.Калашникова, Ижевск</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Настоящее и будущее современного студента</h3>
+                                                            </div>
+                                                             <div class="clearfix"></div>
+                                                         </div>
+
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/galyautdinova.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Галяутдинова Альфия Эмильевна</span><br>студентка 4 курса института информатики и вычислительной техники ИжГТУ имени М.Т.Калашникова, Ижевск</h4></div>
+                                                            <div class="sc-info">
+                                                            <h3>Обзор хостингов изображений и видео</h3>
                                                             </div>
                                                              <div class="clearfix"></div>
                                                          </div>
