--- a/index.html
+++ b/index.html
@@ -2025,6 +2025,19 @@
                                 <h3>Суханов Дмитрий Анатольевич</h3>
                                 <span class="subtitle2">менеджер компетенции "Предпринимательство" WorldSkills, Москва</span>
                             </div>
+                        </div> 
+
+                        <div class="clearfix"></div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/ustinova.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>УСТИНОВА НАТАЛЬЯ ПАВЛОВНА</h3>
+                                <span class="subtitle2">к.п.н., руководитель группы управления внеучебной работы со студентами ИжГТУ имени М.Т.Калашникова, Ижевск</span>
+                            </div>
                         </div>
 
                     </div>
