--- a/index.html
+++ b/index.html
@@ -976,6 +976,16 @@
 
                                                             <div class="clearfix"></div>                                                        
                                                          </div>
+
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/emelianova.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Емельянова Екатерина Александровна</span><br>руководитель Регионального координационного центра движения «Молодые профессионалы» (Worldskills Russia) в УР, и.о. зав.кафедрой профориентации и профессионального образования АОУ ДПО УР «Институт развития образования», Ижевск</h4></div>
+                                                            <div class="sc-info">
+                                                            <h3>Стандарты Worldskills Russia – вектор развития системы профессионального образования региона</h3>
+                                                            </div>    
+
+                                                            <div class="clearfix"></div>                                                        
+                                                         </div>
                                                     
                                                         </div>
 
@@ -2037,6 +2047,17 @@
 
                                 <h3>УСТИНОВА НАТАЛЬЯ ПАВЛОВНА</h3>
                                 <span class="subtitle2">к.п.н., руководитель группы управления внеучебной работы со студентами ИжГТУ имени М.Т.Калашникова, Ижевск</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/emelianova.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Емельянова Екатерина Александровна</h3>
+                                <span class="subtitle2">руководитель Регионального координационного центра движения «Молодые профессионалы» (Worldskills Russia) в УР, и.о. зав.кафедрой профориентации и профессионального образования АОУ ДПО УР «Институт развития образования», Ижевск</span>
                             </div>
                         </div>
 
