--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
                                     <div class="spacer-single"></div>
                                     <div class="subtitle s2"><h3><span><i class="fa fa-calendar-o" color="white"></i>30, 31 марта и 1 апреля</span><span><i class="fa fa-map-marker" color="white"></i>Ижевск, Россия</span></h3></div>
                                     <div class="subtitle s2"><h3><span><i class="fa fa-clock-o" color="white"></i>9:30 - 17:30 (МСК)</span></h3></div>
+                                    <div class="subtitle s2"><h3><span><i class="fa fa-video-camera" color="white"></i>Трансляция: <a href="https://youtu.be/UuPcM8eHurw" target="_blank">30 марта 2021г</a></span></h3></div>
+                                    <div class="subtitle s2"><h3><span><i class="fa fa-video-camera" color="white"></i>Трансляция: <a href="https://youtu.be/kLl5Dn1C7S4" target="_blank">31 марта 2021г</a></span></h3></div>
+                                    <div class="subtitle s2"><h3><span><i class="fa fa-video-camera" color="white"></i>Трансляция: <a href="https://youtu.be/Fnh-yCwJQ0E" target="_blank">1 апреля 2021г</a></span></h3></div>
+                                    <div class="subtitle s2"><h3><span><i class="fa fa-paper-plane" color="white"></i><a href="https://t.me/conf_2021" target="_blank">Telegam канал</a></span></h3></div>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-single"></div>
@@ -876,6 +880,15 @@
                                                             </div>
                                                             <div class="clearfix"></div>
                                                          </div>
+
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Селиверстов Николай Дмитриевич</span><br>к.т.н, доцент, директор института новых образовательных программ и технологий Московского Политеха, Москва</h4></div>
+                                                            <div class="sc-info">
+                                                            <h3>Цифровизация профессионального образования: от студента до пенсионера</h3>
+                                                            </div>
+                                                            <div class="clearfix"></div>
+                                                         </div>
                                                     
                                                         </div>
 
@@ -903,14 +916,6 @@
                                                             <div class="sc-pic"><img src="images/team/sidorina.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
                                                             <h4><span>СИДОРИНА ЕКАТЕРИНА ВАЛЕРЬЕВНА</span><br>директор Института непрерывного профессионального образования ИжГТУ имени М.Т.Калашникова, Ижевск</h4>
-                                                            </div>                                                            
-
-                                                            <div class="clearfix"></div>                                                      
-                                                         </div>
-                                                         <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/nikitinaev.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-info">
-                                                            <h4><span>Никитина Елена Валентиновна</span><br>начальник отдела профессионального образования МОиН УР, Ижевск</h4>
                                                             </div>                                                            
 
                                                             <div class="clearfix"></div>                                                      
@@ -982,6 +987,16 @@
                                                             <div class="sc-name"><h4><span>Емельянова Екатерина Александровна</span><br>руководитель Регионального координационного центра движения «Молодые профессионалы» (Worldskills Russia) в УР, и.о. зав.кафедрой профориентации и профессионального образования АОУ ДПО УР «Институт развития образования», Ижевск</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Стандарты Worldskills Russia – вектор развития системы профессионального образования региона</h3>
+                                                            </div>    
+
+                                                            <div class="clearfix"></div>                                                        
+                                                         </div>
+
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/nikitinaev.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Никитина Елена Валентиновна</span><br>начальник отдела профессионального образования Министерства образования и науки Удмуртской Республики, Ижевск</h4></div>
+                                                            <div class="sc-info">
+                                                            <h3></h3>
                                                             </div>    
 
                                                             <div class="clearfix"></div>                                                        
@@ -1198,7 +1213,16 @@
                                                             <h3>Цифровые бренды технических университетов</h3>
                                                             </div>
                                                             <div class="clearfix"></div>                                                           
-                                                         </div>                              
+                                                         </div> 
+
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/vahovski.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-name"><h4><span>Ваховский Евгений Вячеславович</span><br>ведущий научный сотрудник Центра компетенций по подготовке, переподготовке и повышению квалификации сотрудников международных служб российских образовательных организаций РАНХиГС, Ульяновск</h4></div>
+                                                            <div class="sc-info">
+                                                            <h3>Интеграция маркетинговой функции в деятельность вуза</h3>
+                                                            </div>
+                                                            <div class="clearfix"></div>                                                           
+                                                         </div>                             
                                                     
                                                         </div>
                                                     </div>
@@ -2058,6 +2082,39 @@
 
                                 <h3>Емельянова Екатерина Александровна</h3>
                                 <span class="subtitle2">руководитель Регионального координационного центра движения «Молодые профессионалы» (Worldskills Russia) в УР, и.о. зав.кафедрой профориентации и профессионального образования АОУ ДПО УР «Институт развития образования», Ижевск</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/nikitinaev.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Никитина Елена Валентиновна</h3>
+                                <span class="subtitle2">начальник отдела профессионального образования Министерства образования и науки Удмуртской Республики, Ижевск</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/vahovski.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Ваховский Евгений Вячеславович</h3>
+                                <span class="subtitle2">ведущий научный сотрудник Центра компетенций по подготовке, переподготовке и повышению квалификации сотрудников международных служб российских образовательных организаций РАНХиГС, Ульяновск</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                            <div class="profile_pic text-center sm-mb30">
+                                <figure class="picframe s2 mb30">
+                                    <img src="images/team/1.jpg" class="img-responsive" alt="">
+                                </figure>
+
+                                <h3>Селиверстов Николай Дмитриевич</h3>
+                                <span class="subtitle2">к.т.н, доцент, директор института новых образовательных программ и технологий Московского Политеха, Москва</span>
                             </div>
                         </div>
 
