--- a/index.html
+++ b/index.html
@@ -2107,7 +2107,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                        <!-- <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
                                     <img src="images/team/1.jpg" class="img-responsive" alt="">
@@ -2116,7 +2116,7 @@
                                 <h3>Селиверстов Николай Дмитриевич</h3>
                                 <span class="subtitle2">к.т.н, доцент, директор института новых образовательных программ и технологий Московского Политеха, Москва</span>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
