--- a/index.html
+++ b/index.html
@@ -1173,12 +1173,21 @@
                                                         <div id="day2_15" class="collapse">
 
                                                         <div class="schedule-item">
-                                                            <div class="sc-info"><h3>Модератор</h3></div>
+                                                            <div class="sc-info"><h3>Модераторы</h3></div>
                                                         </div>
                                                         <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/ryabchikov.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
                                                             <h4><span>Рябчиков Алексей Вячеславович</span><br>к.т.н., доцент, директор Института международных образовательных программ, ИжГТУ имени М.Т.Калашникова, Ижевск</h4>
+                                                            </div>                                                            
+
+                                                            <div class="clearfix"></div>                                                      
+                                                         </div>
+
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/bakumenko.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-info">
+                                                            <h4><span>БАКУМЕНКО ОЛЬГА АРКАДЬЕВНА</span><br>к.э.н., ведущий аналитик Центра организации науки и академического развития ВШЭ в Санкт-Петербурге, Санкт-Петербург</h4>
                                                             </div>                                                            
 
                                                             <div class="clearfix"></div>                                                      
