--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,7 @@
                                                             <div class="sc-pic"><img src="images/team/faizulin.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>Файзулин Максим Игоревич</span><br>ст.преподаватель кафедры "Экономика и управление организацией" ИжГТУ имени М.Т.Калашникова, директор АУ УР «Молодежный центр Удмуртской Республики», Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3></h3>
+                                                            <h3>Современные инструменты для проведения занятий</h3>
                                                             </div>
                                                             <div class="clearfix"></div>
                                                          </div>
