--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
                                                             <div class="sc-pic"><img src="images/team/fominov.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>ФОМИНОВ МИХАИЛ АЛЕКСАНДРОВИЧ</span><br>первый заместитель министра информатизации и связи Удмуртской Республики, Ижевск</h4></div>
                                                             <div class="sc-info">
-                                                            <h3>Проблемы взаимодействия техникумов и предприятий в реализации образовательных проектов</h3>
+                                                            <h3>Выпускник СПО - реальность и ожидание</h3>
                                                             </div>    
 
                                                             <div class="clearfix"></div>                                                        
