--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
                                                          </div>
 
                                                          <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/1.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/seleverstov.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-name"><h4><span>Селиверстов Николай Дмитриевич</span><br>к.т.н, доцент, директор института новых образовательных программ и технологий Московского Политеха, Москва</h4></div>
                                                             <div class="sc-info">
                                                             <h3>Цифровизация профессионального образования: от студента до пенсионера</h3>
@@ -2116,16 +2116,16 @@
                             </div>
                         </div>
 
-                        <!-- <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
+                        <div class="col-md-2 wow fadeIn" data-wow-delay=".6s">
                             <div class="profile_pic text-center sm-mb30">
                                 <figure class="picframe s2 mb30">
-                                    <img src="images/team/1.jpg" class="img-responsive" alt="">
+                                    <img src="images/team/seleverstov.jpg" class="img-responsive" alt="">
                                 </figure>
 
                                 <h3>Селиверстов Николай Дмитриевич</h3>
                                 <span class="subtitle2">к.т.н, доцент, директор института новых образовательных программ и технологий Московского Политеха, Москва</span>
                             </div>
-                        </div> -->
+                        </div>
 
                     </div>
                 </div>
