--- a/index.html
+++ b/index.html
@@ -2327,7 +2327,8 @@
                                 <h4 style="color: white;">eedu@istu.ru</h4>
                             </div>
                         </div>
-                    </div>           
+                    </div> 
+		<iframe width="960" height="540" src="https://iot-istu.itch.io/vl-chemistry-electroliz"> Your browser does not display iFrames</iframe>
 
             </section>
             <!-- section close -->  
