--- a/index.html
+++ b/index.html
@@ -2328,7 +2328,7 @@
                             </div>
                         </div>
                     </div> 
-		<iframe width="960" height="540" src="https://iot-istu.itch.io/vl-chemistry-electroliz"> Your browser does not display iFrames</iframe>
+		<!-- <iframe width="960" height="540" src="https://iot-istu.itch.io/vl-chemistry-electroliz"> Your browser does not display iFrames</iframe> -->
 
             </section>
             <!-- section close -->  
