--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                                     <div class="subtitle s2"><h3><span><i class="fa fa-video-camera" color="white"></i>Трансляция: <a href="https://youtu.be/kLl5Dn1C7S4" target="_blank">31 марта 2021г</a></span></h3></div>
                                     <div class="subtitle s2"><h3><span><i class="fa fa-video-camera" color="white"></i>Трансляция: <a href="https://youtu.be/Fnh-yCwJQ0E" target="_blank">1 апреля 2021г</a></span></h3></div>
                                     <div class="subtitle s2"><h3><span><i class="fa fa-paper-plane" color="white"></i><a href="https://t.me/conf_2021" target="_blank">Telegam канал</a></span></h3></div>
+                                    <div class="subtitle s2"><h3><span><i class="fa fa-certificate" color="white"></i><a href="http://distant.istu.ru/conf/sert/" target="_blank">Получить сертификат участника</a></span></h3></div>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-single"></div>
