--- a/it_mob.html
+++ b/it_mob.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Международная онлайн-конференция ИжГТУ им. М.Т. Калашникова</title>
+    <title>Ярмарка компетенций будущего</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:title" content="Международная онлайн-конференция ИжГТУ им. М.Т. Калашникова" />
+    <meta property="og:title" content="Ярмарка компетенций будущего" />
     <meta property="og:url" content="http://distant.istu.ru/conf/" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Международная онлайн-конференция ИжГТУ им. М.Т. Калашникова" />
-    <meta property="og:image" content="images/background/bg_source.jpg" />
+    <meta property="og:site_name" content="Ярмарка компетенций будущего" />
+    <meta property="og:image" content="images/background/bg_source.png" />
 
     <!--[if lt IE 9]>
 	<script src="js/html5shiv.js"></script>
@@ -117,7 +117,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>ДВ рамках курса описываются и объясняются процессы, алгоритмы и инструменты, относящиеся к основным принципам машинного обучения:
+                                <h4>В рамках курса описываются и объясняются процессы, алгоритмы и инструменты, относящиеся к основным принципам машинного обучения:
                                     <ul>
                                         <li>назначение и основные принципы машинного обучения</li>
                                         <li>характерные стадии подготовки данных для моделей машинного обучения</li>
